# protobuf_bug_reproduce

./: readme.md
proto/: test.proto
scripts/: generate_cmake_solution.bat  generate_proto_files.bat  generate_proto_files_cpp.bat  generate_proto_files_csharp.bat
src/: .gitignore  CMakeLists.txt  conanfile.txt
src/cpp_sample/: CMakeLists.txt  main.cpp
src/csharp_sample/: CMakeLists.txt  main.cs
